# axi-interconnect-kit

./: .clang-format-ignore  .gitignore  CMakeLists.txt  Makefile  README.md  README_CN.md
axi_interconnect/: AXI_Interconnect.cpp  AXI_Interconnect_AXI3.cpp  AXI_LLC.cpp  AXI_Router_AXI4.cpp  axi_interconnect_32b_test.cpp  axi_interconnect_32b_wstall_test.cpp  axi_interconnect_aw_latch_test.cpp  axi_interconnect_axi3_test.cpp  axi_interconnect_dual_port_perf_vectors_test.cpp  axi_interconnect_dual_port_test.cpp  axi_interconnect_dual_port_trace_vectors.cpp  axi_interconnect_dual_port_trace_vectors_test.cpp  axi_interconnect_issue_probe_test.cpp  axi_interconnect_llc_axi4_test.cpp  axi_interconnect_test.cpp  axi_llc_cache_trace_vectors.cpp  axi_llc_cache_trace_vectors_test.cpp  axi_llc_dcache_read_alloc_test.cpp  axi_llc_test.cpp  axi_protocol_equiv_test.cpp  axi_test_axi4_llc_env.h
axi_interconnect/include/: AXI_Interconnect.h  AXI_Interconnect_AXI3.h  AXI_Interconnect_IO.h  AXI_LLC.h  AXI_LLC_Config.h  AXI_Router_AXI4.h
demos/: axi3_smoke.cpp  axi4_smoke.cpp
docs/: dc_compat_elaborate_notes_20260506_CN.md  dual_axi_ec_closure_plan_CN.md  dual_axi_goal_audit_20260506_CN.md  dual_axi_verification_checklist_CN.md  dual_external_axi_ports_CN.md  formal_table_oracle_cutpoints_CN.md  interfaces.md  interfaces_CN.md  llc_design_CN.md  rtl_cpp_equivalence_status_CN.md  rtl_cpp_performance_contract_CN.md  submodule_architecture_CN.md
formal/: README_CN.md  run_passed_hw_cbmc.sh
formal/axi_beat_shape/: README_CN.md  axi_beat_shape_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_fifo_ptr/: README_CN.md  axi_fifo_ptr_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_id_shape/: README_CN.md  axi_id_shape_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_issue_select/: README_CN.md  axi_issue_select_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_mode2_shape/: README_CN.md  axi_mode2_shape_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_mode2_shape_single4/: README_CN.md  axi_mode2_shape_single4_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_pending_scan/: README_CN.md  axi_pending_scan_fallback_formal_top.v  axi_pending_scan_formal_top.v  harness.c  harness_fallback.c  run_hw_cbmc.sh  run_hw_cbmc_fallback.sh
formal/axi_pending_scan_fallback/: README_CN.md  run_hw_cbmc.sh
formal/axi_queue_ctrl/: README_CN.md  axi_queue_ctrl_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_read_pack/: README_CN.md  axi_read_pack_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_read_pack_prod_width/: README_CN.md  axi_read_pack_prod_width_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_read_pack_single4/: README_CN.md  axi_read_pack_single4_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_read_resp_ctrl/: README_CN.md  axi_read_resp_ctrl_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_req_accept/: README_CN.md  axi_req_accept_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_resp_accept/: README_CN.md  axi_resp_accept_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_resp_route/: README_CN.md  axi_resp_route_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_source_resp_mux/: README_CN.md  axi_source_resp_mux_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_write_pack/: README_CN.md  axi_write_pack_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_write_pack_prod_width/: README_CN.md  axi_write_pack_prod_width_formal_top.v  harness.c  run_hw_cbmc.sh
formal/axi_write_pack_single4/: README_CN.md  axi_write_pack_single4_formal_top.v  harness.c  run_hw_cbmc.sh
formal/bridge_prod_width_cacheline_ar_shape/: README_CN.md  axi_llc_axi_bridge_prod_width_cacheline_ar_shape_formal_top.v  harness.c  run_hw_cbmc.sh
formal/bridge_prod_width_cacheline_aw_shape/: README_CN.md  axi_llc_axi_bridge_prod_width_cacheline_aw_shape_formal_top.v  harness.c  run_hw_cbmc.sh
formal/bridge_prod_width_cacheline_read_response/: README_CN.md  axi_llc_axi_bridge_prod_width_cacheline_read_response_formal_top.v  harness.c  run_hw_cbmc.sh
formal/bridge_prod_width_cacheline_write_shape/: README_CN.md  axi_llc_axi_bridge_prod_width_cacheline_write_shape_formal_top.v  harness.c  run_hw_cbmc.sh
formal/cache_ctrl_dirty_evict_writeback/: README_CN.md  cache_ctrl_dirty_evict_writeback_formal_top.v  harness.c  run_hw_cbmc.sh
formal/cache_ctrl_invalidate_line_hit/: README_CN.md  cache_ctrl_invalidate_line_hit_formal_top.v  harness.c  run_hw_cbmc.sh
formal/cache_ctrl_partial_write_hit_merge/: README_CN.md  cache_ctrl_partial_write_hit_merge_formal_top.v  harness.c  run_hw_cbmc.sh
formal/cache_ctrl_partial_write_miss_refill/: README_CN.md  cache_ctrl_partial_write_miss_refill_formal_top.v  harness.c  run_hw_cbmc.sh
formal/cache_ctrl_read_miss_refill_response/: README_CN.md  cache_ctrl_read_miss_refill_response_formal_top.v  harness.c  run_hw_cbmc.sh
formal/cache_ctrl_table_oracle_dirty_evict_then_read/: README_CN.md  cache_ctrl_table_oracle_dirty_evict_then_read_formal_top.v  harness.c  run_hw_cbmc.sh
formal/cache_ctrl_table_oracle_invalidate_then_read_miss/: README_CN.md  cache_ctrl_table_oracle_invalidate_then_read_miss_formal_top.v  harness.c  run_hw_cbmc.sh
formal/cache_ctrl_table_oracle_partial_write_miss_refill_then_read/: README_CN.md  cache_ctrl_table_oracle_partial_write_miss_refill_then_read_formal_top.v  harness.c  run_hw_cbmc.sh
formal/cache_ctrl_table_oracle_read_miss_refill_then_read/: README_CN.md  cache_ctrl_table_oracle_read_miss_refill_then_read_formal_top.v  harness.c  (+1 more)
include/: PhysMemory.h  axi_dual_port_route_shape.h  axi_interconnect_compat.h  axi_mmio_map.h
mmio/: MMIO_Bus_AXI3.cpp  MMIO_Bus_AXI4.cpp  UART16550_Device.cpp
rtl/: README.md  README_CN.md  run_all_contracts.sh  run_cpp_llc_hit_perf_contract.sh  run_cpp_llc_miss_perf_contract.sh  run_cpp_perf_contract.sh  run_dual_axi_contracts.sh
sim_ddr/: SimDDR.cpp  sim_ddr_32b_test.cpp  sim_ddr_read_write_turnaround_test.cpp  sim_ddr_test.cpp  sim_ddr_write_drain_mode_test.cpp  sim_ddr_write_queue_test.cpp  sim_ddr_write_resp_latency_test.cpp
tools/: compare_linux_boot_perf.py
(+462 files in other folders)
